--- a/Диаграмма_прецедентов.md
+++ b/Диаграмма_прецедентов.md
@@ -15,7 +15,8 @@
     (<start> Telegram-бот) <|.. (О нас) : <<extend>>
     (<start> Telegram-бот) <|.. (Связь с саппортом) : <<extend>>
     
-    (Вход в личный кабинет) --|> (Просмотр загруженных аудио) : <<include>>
+    (Вход в личный кабинет) --|> (Выбор языка) : <<include>>
+    (Выбор языка) --|> (Просмотр загруженных аудио) : <<include>>
     (Просмотр загруженных аудио) --|> (Просмотр транслитераций) : <<include>>
     
     (Просмотр транслитераций) <|.. (Поиск по содержанию) : <<extend>>
