--- a/Диаграмма_прецедентов.md
+++ b/Диаграмма_прецедентов.md
@@ -1,6 +1,58 @@
 # Диаграмма прецедентов
 
-Диаграмму прецедентов удалось выполнить только в PlantUML. Посмотреть её можно по [данной ссылке](https://drive.google.com/file/d/1wPwlprMaF_cbWEdHxZaFzzBKDfEV3Rk3/view?usp=sharing).
+Диаграмма прецедентов выполнена в PlantUML. Посмотреть её можно по [данной ссылке](https://drive.google.com/file/d/1wPwlprMaF_cbWEdHxZaFzzBKDfEV3Rk3/view?usp=sharing). Данная диаграмма показывает, как пользователь взаимодействует с Telegram-ботом для обработки аудио и видео с помощью транслитерации. Вот более простое и понятное объяснение:
+
+### Кто участвует?
+
+- **Пользователь** — человек, который использует Telegram-бота.
+
+### Что может делать пользователь?
+
+1. **Начать работу с ботом** — это отправная точка.
+
+2. **Войти в личный кабинет** — чтобы получить доступ к своим файлам и настройкам.
+
+3. **Загрузить аудио или видео** — отправить файл для обработки.
+
+4. **Узнать информацию о сервисе** — раздел "О нас".
+
+5. **Связаться с поддержкой** — если нужна помощь.
+
+### Что происходит после входа в личный кабинет?
+
+- Пользователь выбирает язык транслитерации.
+
+- Может просмотреть свои загруженные аудио.
+
+- Далее — посмотреть транслитерацию (текст, полученный из аудио/видео).
+
+### Что можно делать с транслитерацией?
+
+- Искать нужные слова или фразы.
+
+- Редактировать текст, если нужно исправить ошибки.
+
+- Переименовывать говорящих (спикеров).
+
+- Сохранять транслитерацию в файл.
+
+- Создавать ссылку, чтобы поделиться транслитерацией с другими.
+
+- Делать краткое содержание (саммаризацию).
+
+### Как работает оплата?
+
+- При загрузке аудио/видео пользователь должен оплатить услугу.
+
+- Есть бесплатный пробный период.
+
+- Можно оплатить с помощью "звёзд" за каждое аудио.
+
+- После оплаты пользователь получает ссылку на сайт с транслитерацией.
+
+### Итог
+
+Пользователь запускает бота, входит в личный кабинет, загружает файлы, выбирает язык и просматривает транслитерации. Он может редактировать текст, искать информацию, сохранять результаты и делиться ими. Оплата происходит через пробный период или покупку "звёзд". Все действия связаны между собой и помогают удобно работать с транслитерацией аудио и видео.
 
     @startuml
     left to right direction
