--- a/Диаграмма_прецедентов.md
+++ b/Диаграмма_прецедентов.md
@@ -1,6 +1,6 @@
 # Диаграмма прецедентов
 
-Диаграмма прецедентов выполнена в PlantUML. Посмотреть её можно по [данной ссылке](https://drive.google.com/file/d/1wPwlprMaF_cbWEdHxZaFzzBKDfEV3Rk3/view?usp=sharing). Данная диаграмма показывает, как пользователь взаимодействует с Telegram-ботом для обработки аудио и видео с помощью транслитерации. Вот более простое и понятное объяснение:
+Диаграмма прецедентов выполнена в PlantUML. Посмотреть её можно по [данной ссылке](https://drive.google.com/file/d/1wPwlprMaF_cbWEdHxZaFzzBKDfEV3Rk3/view?usp=sharing). Данная диаграмма показывает, как пользователь взаимодействует с Telegram-ботом для обработки аудио и видео с помощью транслитерации.
 
 ### Кто участвует?
 
@@ -53,6 +53,9 @@
 ### Итог
 
 Пользователь запускает бота, входит в личный кабинет, загружает файлы, выбирает язык и просматривает транслитерации. Он может редактировать текст, искать информацию, сохранять результаты и делиться ими. Оплата происходит через пробный период или покупку "звёзд". Все действия связаны между собой и помогают удобно работать с транслитерацией аудио и видео.
+
+![Иллюстрация к проекту]([https://github.com/retisanse/laterlistener/blob/main/Диаграмма_прецедентов.png)
+
 
     @startuml
     left to right direction
