--- a/Диаграмма_прецедентов.md
+++ b/Диаграмма_прецедентов.md
@@ -54,7 +54,7 @@
 
 Пользователь запускает бота, входит в личный кабинет, загружает файлы, выбирает язык и просматривает транслитерации. Он может редактировать текст, искать информацию, сохранять результаты и делиться ими. Оплата происходит через пробный период или покупку "звёзд". Все действия связаны между собой и помогают удобно работать с транслитерацией аудио и видео.
 
-![Иллюстрация к проекту]([https://github.com/retisanse/laterlistener/blob/main/Диаграмма_прецедентов.png)
+![Иллюстрация к проекту](https://github.com/retisanse/laterlistener/blob/main/Диаграмма_прецедентов.png)
 
 
     @startuml
